added html for services section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,94 @@
         </div>
         <img src="images/mobiles.webp" alt="paytm Mobile Images" class="hero-right">
     </section>
+
+    <!-- services -->
+    <section class="services">
+        <div class="up">
+            <h2>Recharge and Pay Bills on Paytm</h2>
+            <card>
+                <img src="images/recharge/Mobile.png" alt="mobile image" class="serviceCardLogo">
+                <h3>Recharge Prepaid Mobile</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/bulb.png" alt="" class="serviceCardLogo">
+                <h3>Pay Electricity Bill</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/dth.png" alt="" class="serviceCardLogo">
+                <h3>Recharge DTH Connection</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/cylibder.png" alt="" class="serviceCardLogo">
+                <h3>Book Gas Cylinder</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/wifi.png" alt="" class="serviceCardLogo">
+                <h3>Pay Broadband & landline Bill</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/book.png" alt="" class="serviceCardLogo">
+                <h3>Pay Education Fee</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/recharge/stack.png" alt="" class="serviceCardLogo">
+                <h3>All Payment Services</h3>
+                <div>&gt;</div>
+            </card>
+        </div>
+        <div class="down">
+            <h2>Book and Buy on Paytm</h2>
+            <card>
+                <img src="images/Book and buy/movie.png" alt="" class="serviceCardLogo">
+                <h3>Movie Tickets</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/Book and buy/flight.png" alt="" class="serviceCardLogo">
+                <h3>Flight Tickets</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/Book and buy/bus.png" alt="" class="serviceCardLogo">
+                <h3>Bus Tickets</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/Book and buy/train.png" alt="" class="serviceCardLogo">
+                <h3>Train Tickets</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/Book and buy/umbrella.png" alt="" class="serviceCardLogo">
+                <h3>Buy Insurance</h3>
+            </card>
+            <card>
+                <img src="images/Book and buy/intFlight.png" alt="" class="serviceCardLogo">
+                <h3>International Flights</h3>
+                <div>&gt;</div>
+            </card>
+            <card>
+                <img src="images/Book and buy/invest.webp" alt="" class="serviceCardLogo">
+                <h3>Invest in Stocks</h3>
+                <div>&gt;</div>
+            </card>
+            
+        </div>
+    </section>
+
+    <section class="payment-instruments">
+        <h2>Paytm Payment Instruments</h2>
+        <div class="card1"></div>
+        <div class="card2"></div>
+        <div class="card3"></div>
+        <div class="card4"></div>
+    </section>
     
 </body>
 </html>
