created and designed payment-instruments section

--- a/index.html
+++ b/index.html
@@ -204,12 +204,147 @@
       </div>
     </section>
 
+    <!-- payment instruments -->
     <section class="payment-instruments">
       <h2>Paytm Payment Instruments</h2>
-      <div class="card1"></div>
-      <div class="card2"></div>
-      <div class="card3"></div>
-      <div class="card4"></div>
+
+      <!-- card1 -->
+      <div class="card1">
+        <div class="card-left">
+          <div class="card-wrap">
+            <img
+              src="./images/payment instruments/wallet.png"
+              alt="paytm wallet"
+            />
+            <h3>Paytm Wallet</h3>
+          </div>
+          <p class="card-text-bold">
+            The Fastest Way to <br />Pay In-store & Online.
+          </p>
+          <p class="card-text-light-bold">
+            Load up your Paytm Wallet for free and make payments in a jiffy at
+            over 21 million stores, websites and apps.
+          </p>
+
+          <div class="download">
+            Download Paytm App
+
+            <i class="fa-brands fa-apple"></i>
+            <i class="fa-brands fa-google-play"></i>
+          </div>
+        </div>
+        <div class="card-right">
+          <img
+            src="./images/payment instruments/walletMob.webp"
+            alt="paytm wallet in mobile"
+          />
+        </div>
+      </div>
+
+      <!-- card2 -->
+      <div class="card2">
+        <div class="card-left">
+          <div class="card-wrap">
+            <img src="./images/payment instruments/upi.png" alt="paytm upi" />
+            <h3>Paytm Wallet</h3>
+          </div>
+          <p class="card-text-bold">
+            Pay anyone directly <br />
+            from your bank <br />
+            account.
+          </p>
+          <p class="card-text-light-bold">
+            Pay anyone, everywhere. Make contactless & secure payments in-stores
+            or online using Paytm Wallet or Directly from your Bank Account.
+            Plus, send & receive money from anyone.
+          </p>
+
+          <div class="download">
+            Download Paytm App
+
+            <i class="fa-brands fa-apple"></i>
+            <i class="fa-brands fa-google-play"></i>
+          </div>
+        </div>
+        <div class="card-right">
+          <img
+            src="./images/payment instruments/upi transfer.webp"
+            alt="paytm upi"
+          />
+        </div>
+      </div>
+
+      <!-- card3 -->
+      <div class="card3">
+        <div class="card-left">
+          <img
+            src="./images/payment instruments/postpaid.webp"
+            alt="paytm postpaid"
+            class="paytm-postpaid-logo"
+          />
+
+          <p class="card-text-bold">
+            Want it?<br />
+            No more waiting for it.
+          </p>
+          <p class="card-text-light-bold">
+            With Paytm Postpaid, your wishlist doesn't have to be on the
+            waitlist. Shop for the things you want today and pay for them next
+            month.
+          </p>
+
+          <div class="learn-more">
+            <p>Learn more <span>> </span></p>
+          </div>
+        </div>
+        <div class="card-right">
+          <img
+            src="./images/payment instruments/shopping.webp"
+            alt="paytm postpaid"
+            id="shopping"
+          />
+        </div>
+      </div>
+
+      <!-- card-4 -->
+      <div id="card4">
+        <!-- divided into two cards -->
+
+        <!-- hdfc -->
+        <div class="hdfc">
+          <img src="./images/payment instruments/hdfc.png" class="hdfc-logo"
+          alt="" / >
+          <h3 class="card-text-bold">Unlimited Cashback Every time</h3>
+          <p class="card-text-light-bold">
+            Paytm HDFC Bank Select Credit Card. A card with assured Cashback and
+            incredible offers.
+          </p>
+          <img
+            src="./images/payment instruments/cardhdfc.webp"
+            class="cardhdfc"
+            alt=""
+          />
+        </div>
+
+        <!-- sbi -->
+        <div class="sbi">
+          <img
+            src="./images/payment instruments/sbi.png"
+            class="sbi-logo"
+            alt=""
+          />
+          <h3 class="card-text-bold">Unlimited Cashback Every time</h3>
+          <p class="card-text-light-bold">
+            Paytm HDFC Bank Select Credit Card. A card with assured Cashback and
+            incredible offers.
+          </p>
+          <img
+            src="./images/payment instruments/cardsbi.webp"
+            class="cardsbi"
+            alt=""
+          />
+        </div>
+      </div>
     </section>
   </body>
 </html>
